button functionality, adding buttons

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <label for="artistname">Enter an Artist Name:</label>
       <input type="text" id="artistName" placeholder="Michaelangelo">
     </div>
-    <button type="add">Add</button>
+    <button id="add">Add</button>
     <button type="clear">Clear</button>
   </form>
 <!-- The images appear here -->
