--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <input type="text" id="artistName" placeholder="Michaelangelo">
     </div>
     <button id="add">Add</button>
-    <button type="clear">Clear</button>
+    <button id="clear">Clear</button>
   </form>
 <!-- The images appear here -->
 <div id="gallery"></div>
