--- a/index.html
+++ b/index.html
@@ -8,28 +8,28 @@
     <script src="assets/main.js" defer></script>
     <!-- JQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <title>Virtual Gallery</title>
+    <title>Virtual Card Art Binder</title>
 </head>
 <body>
 <!-- This is the header -->
-<header><h1>My Art Collection</h1></header>
+<header><h1>My Card Art Collection</h1></header>
 <!-- Artist name buttons go here -->
 <div id="nameBtn"></div>
 <!-- The artist search function -->
 <form>
     <div>
-      <label for="artistname">Enter an Artist Name:</label>
-      <input type="text" id="artistName" placeholder="Michaelangelo">
+      <label for="cardname">Enter a Card Name:</label>
+      <input type="text" id="cardName" placeholder="Mana Vault">
     </div>
-    <button id="add">Add</button>
-    <button id="clear">Clear</button>
+    <button type="add" id="add">Add</button>
+    <button type="clear" id="clear">Clear</button>
   </form>
 <!-- The images appear here -->
-<div id="gallery"></div>
-<!-- Previous, Save, and Next buttons -->
-<button type="prev">Previous</button>
+<div id="cardGallery"></div>
+<!-- Save Button -->
 <button type="save">SAVE</button>
-<button type="next">Next</button>
+<!-- Random Button -->
+<button type="random">RANDOM</button>
 <!-- eBay header -->
 <section><h2>eBay Search Results</h2></section>
 </body>
