added search, random, and save function

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 <!-- The images appear here -->
 <div id="cardGallery"></div>
 <!-- Save Button -->
-<button type="save">SAVE</button>
+<button id="save">SAVE</button>
 <!-- Random Button -->
-<button type="random">RANDOM</button>
+<button id="random">RANDOM</button>
 <!-- eBay header -->
 <section><h2>eBay Search Results</h2></section>
 </body>
