--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <!-- The artist search function -->
 <form>
     <div>
+      <!-- input for card name -->
       <label for="cardname">Enter a Card Name:</label>
       <input type="text" id="cardName" placeholder="Mana Vault">
     </div>
