--- a/index.html
+++ b/index.html
@@ -1,39 +1,75 @@
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Our Stylesheet -->
-    <link rel="stylesheet" href="assets/style.css">
-    <!-- Our Script -->
-    <script src="assets/main.js" defer></script>
-    <!-- JQuery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <title>Virtual Card Art Binder</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+  <link rel="stylesheet" href="assets/style.css">
+  <title>Virtual Card Art Binder</title>
 </head>
 <body>
-<!-- This is the header -->
-<header><h1>My Card Art Collection</h1></header>
-<!-- Artist name buttons go here -->
-<div id="nameBtn"></div>
-<!-- The artist search function -->
-<form>
-    <div>
-      <!-- input for card name -->
-      <label for="cardname">Enter a Card Name:</label>
-      <input type="text" id="cardName" placeholder="Mana Vault">
+  <!-- This is the header -->
+  <header>
+    <h1>My Card Art Collection</h1>
+  </header>
+  <!-- Artist name buttons go here -->
+      <div style="background-image: url('assets/images/magic-bg.png'); background-size: cover; background-repeat: no-repeat; align-items: center;">
+    <div class="container">
+    <div class="row">
+      <div class="col s12"></div>
+      <!-- Page Content goes here -->
+      <div id="nameBtn">
+      </div>
     </div>
-    <button type="add" id="add">Add</button>
-    <button type="clear" id="clear">Clear</button>
-  </form>
-<!-- The images appear here -->
-<div id="cardGallery"></div>
+  </div>
+ 
+  <!-- Page Content goes here -->
+  <div class="container">
+    <div class="row">
+      <div class="col s12">
+        <form>
+          <div>
+            <!-- input for card name -->
+             <!-- The artist search function -->
+            <label for="cardname">
+              <h2 class="center-align">Enter a Card Name:</h2>
+            </label>
+            <input type="text" id="cardName" placeholder="Card Name or Artist goes here :-)">
+            <button type="add" class="btn waves-effect waves-light" id="add">Add</button>
+            <button type="clear" class="btn waves-effect waves-light" id="clear">Clear</button>
+        </form>
+      </div>
+    </div>
+  </div>
+
+  <!-- The images appear here -->
+  <div class="container">
+  <div class="row">
+    <div class="col s12">
+  <div id="cardGallery"></div>
+</div>
+</div>
+</div>
+<div class="container">
+  <div class="row">
+    <div class="col s12"> 
+      <div class="center-align"> 
 <!-- Save Button -->
-<button type="save">SAVE</button>
-<!-- Random Button -->
-<button type="random">RANDOM</button>
-<!-- eBay header -->
-<section><h2>eBay Search Results</h2></section>
-</body>
-<!-- eBay results go here -->
-<div id="ebay"></div>
+  <button type="save" class="btn waves-effect waves-light">SAVE</button>
+  <!-- Random Button -->
+  <button type="random"class="btn waves-effect waves-light">RANDOM</button>
+  <!-- eBay header -->
+</div>
+</div>
+</div>
+</div>
+  <section>
+    <h2 class="center-align">eBay Search Results</h2>
+    <!-- eBay results go here -->
+    <div id="ebay"></div>
+  </section>
+  </div>
+  </body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+<script type="text/javascript" src="assets/main.js"></script>
 </html>
