--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <!-- Compiled and minified JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-
-  <link rel="stylesheet" href="css/style.css">
+  
+   <link rel="stylesheet" href="assets/images/css/header-footer.css">
+   <link rel="stylesheet" href="css/style.css">
 
   <title>Virtual Gallery</title>
 </head>
@@ -81,7 +82,7 @@
   </body>
 <footer class="page-footer">
   <div class="container">
-  <h5>© 2014 Copyright Text</h5>
+  <h5>© 2020 Copyright Text</h5>
   </div>
 </footer>
 </body>
