--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,82 +8,78 @@
   <script src="assets/main.js" defer></script>
   <!-- JQuery -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script type="text/javascript" src="https://www.dropbox.com/static/api/2/dropins.js" id="dropboxjs" data-app-key="v216v9311p5ls8s"></script>
   <!-- Compiled and minified CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <!-- Compiled and minified JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-
-  <link rel="stylesheet" href="css/style.css">
-
+  <link rel="stylesheet" href="assets/header-footer.css">
+  <link rel="stylesheet" href="assets/style.css">
   <title>Virtual Gallery</title>
 </head>
 
 <body>
   <!-- This is the header -->
-  <nav style="background-image: url('assets/hero-magic-card-ob.png'); min-height: 300px;"alt="crystal ball"class="nav-extended">
-      <h1 class="center-align">My Card Art Collection</h1>
-  </nav>
-  <div style="background-image: url('assets/images/magic-bg.png'); background-size: cover; background-repeat: no-repeat; align-items: center;">
+  
     <div class="container">
-    <div class="row">
-      <div class="col s12"></div>
-      <!-- Page Content goes here -->
-      <div id="nameBtn">
+      <div class="row">
+        <div class="col s12">
+          <!-- Page Content goes here -->
+          <div id="nameBtn">
+          </div>
+        </div>
       </div>
     </div>
-  </div>
- 
-  <!-- Page Content goes here -->
-  <div class="container">
-    <div class="row">
-      <div class="col s12">
-        <form>
-          <div>
-            <!-- input for card name -->
-             <!-- The artist search function -->
-            <label for="cardname">
-              <h2 class="center-align">Enter a Card Name:</h2>
-            </label>
-            <input type="text" id="cardName" placeholder="Card Name or Artist goes here :-)">
-            <button type="add" class="btn waves-effect waves-light" id="add">Add</button>
-            <button type="clear" class="btn waves-effect waves-light" id="clear">Clear</button>
-        </form>
-      </div>
     </div>
-  </div>
 
-  <!-- The images appear here -->
-  <div class="container">
-  <div class="row">
-    <div class="col s12">
-  <div id="cardGallery"></div>
-</div>
-</div>
-</div>
-<div class="container">
-  <div class="row">
-    <div class="col s12"> 
-      <div class="center-align"> 
-<!-- Save Button -->
-  <button id="save" class="btn waves-effect waves-light">SAVE</button>
-  <!-- Random Button -->
-  <button id="random"class="btn waves-effect waves-light">RANDOM</button>
-  <!-- eBay header -->
-</div>
-</div>
-</div>
-</div>
-  <section>
-    <h2 class="center-align">eBay Search Results</h2>
-    <!-- eBay results go here -->
-    <div id="ebay"></div>
-  </section>
-  </div>
-  </body>
-<footer class="page-footer">
-  <div class="container">
-  <h5>© 2014 Copyright Text</h5>
-  </div>
-</footer>
+    <!-- Page Content goes here -->
+    <div class="container">
+      <div class="row">
+        <div class="col s12">
+          <form>
+              <!-- input for card name -->
+              <!-- The artist search function -->
+              <label id="cardname">Enter a Card Name:</label>
+              <input type="text" id="cardName" placeholder="">
+              <button class="btn waves-effect waves-light" id="add">Add</button>
+              <button class="btn waves-effect waves-light" id="clear">Clear</button>
+          </form>
+        </div>
+      </div>
+    </div>
+
+    <!-- The images appear here -->
+    <div class="container">
+      <div class="row">
+        <div class="col l12">
+          <div id="cardGallery"></div>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col s12">
+          <div class="center-align">
+            <!-- Save Button -->
+            <button id="save" class="btn waves-effect waves-light">SAVE</button>
+            <!-- Random Button -->
+            <button id="random" class="btn waves-effect waves-light">RANDOM</button>
+            <!-- eBay header -->
+          </div>
+        </div>
+      </div>
+    </div>
+    <section>
+      <div class="container">
+        <div class="row">
+          <div class="col s12">
+            <h2 class="center-align">Drop into your Drop Box</h2>
+            <!-- eBay results go here -->
+            <a href="https://dl.dropboxusercontent.com/s/deroi5nwm6u7gdf/advice.png" class="dropbox-saver"></a>
+          </div>
+        </div>
+      </div>
+    </section>
 </body>
+
 </html>
