updated responsive behavior in html, readme

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </header>
   <div class="container">
     <div class="row">
-      <div class="col s12">
+      <div class="s4 m8 l12">
         <!-- Page Content goes here -->
         <div id="nameBtn">
         </div>
@@ -42,7 +42,7 @@
   <!-- Page Content goes here -->
   <div class="container">
     <div class="row">
-      <div class="col s12">
+      <div class="s4 m8 l12">
         <form>
           <!-- input for card name -->
           <!-- The artist search function -->
@@ -58,14 +58,14 @@
   <!-- The images appear here -->
   <div class="container">
     <div class="row">
-      <div class="col l12">
+      <div class="s4 m8 l12">
         <div id="cardGallery"></div>
       </div>
     </div>
   </div>
   <div class="container">
     <div class="row">
-      <div class="col s12">
+      <div class="s4 m8 l12">
         <div class="center-align">
           <!-- Save Button -->
           <button id="save" class="btn waves-effect waves-light">SAVE</button>
@@ -79,7 +79,7 @@
   <section>
     <div class="container">
       <div class="row">
-        <div class="col s12">
+        <div class="s4 m8 l12">
           <h2 class="center-align">Drop into your Drop Box</h2>
           <!-- eBay results go here -->
           <div class="center-align">
